LH | feat: Обновление тейлвинда

--- a/last-hearth-landing/src/app/admin/create-question/create-question.component.html
+++ b/last-hearth-landing/src/app/admin/create-question/create-question.component.html
@@ -12,7 +12,7 @@
         <button
             [disabled]="!form.valid"
             type="submit"
-            class="text-white !text-sm cursor-pointer bg-lh-primary-2 rounded-lg self-start py-1.5 px-2.5 mt-2 disabled:text-gray-300 disabled:bg-lh-primary">
+            class="text-white text-sm! cursor-pointer bg-lh-primary-2 rounded-lg self-start py-1.5 px-2.5 mt-2 disabled:text-gray-300 disabled:bg-lh-primary">
                 Создать вопрос
         </button>
     </form>
