--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -30,7 +30,7 @@
         <div class="size-full flex gap-2 justify-center items-center">
             <div class="flex gap-2 flex-col sm:flex-row">
                 <div
-                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-gradient-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
+                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a class="z-10 nav-button rounded-lg p-2.5" href="https://boosty.to/lisov" target="_blank">
                         <img src="/images/Boosty.svg" />
@@ -38,7 +38,7 @@
                 </div>
 
                 <div
-                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-gradient-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
+                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
                         class="z-10 nav-button rounded-lg p-2.5"
@@ -51,7 +51,7 @@
             </div>
             <div class="flex gap-2 flex-col sm:flex-row">
                 <div
-                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-gradient-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
+                    class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
                         class="z-10 nav-button rounded-lg p-2.5"
@@ -62,7 +62,7 @@
                     </a>
                 </div>
                 <div
-                    class="flex justify-center cursor-pointer items-center size-10 relative before:absolute before:inset-0 before:bg-gradient-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
+                    class="flex justify-center cursor-pointer items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
                         class="z-10 nav-button rounded-lg p-2.5"
