--- a/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
+++ b/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
@@ -6,7 +6,7 @@
             <p class="text-2xl text-lh-primary font-bold">1. Общие положения</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isBase }"
+                [ngClass]="{ 'rotate-180!': isBase }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -44,7 +44,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isPersonalInformation }"
+                [ngClass]="{ 'rotate-180!': isPersonalInformation }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -114,7 +114,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isPurposes }"
+                [ngClass]="{ 'rotate-180!': isPurposes }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -154,7 +154,7 @@
             <p class="text-2xl text-lh-primary font-bold">4. Правовые основания обработки персональных данных</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isLegalGrounds }"
+                [ngClass]="{ 'rotate-180!': isLegalGrounds }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -184,7 +184,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isProcedure }"
+                [ngClass]="{ 'rotate-180!': isProcedure }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -246,7 +246,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isSecurityMeasures }"
+                [ngClass]="{ 'rotate-180!': isSecurityMeasures }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -267,7 +267,7 @@
             <p class="text-2xl text-lh-primary font-bold">7. Заключительные положения Политики</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isFinalProvisions }"
+                [ngClass]="{ 'rotate-180!': isFinalProvisions }"
                 class="text-lh-primary transition-all"
             />
         </div>
