--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -12,17 +12,17 @@
             <th tuiTh>
                 <button (click)="getDeaths()" class="cursor-pointer">
                     Смерти
-                    <tui-icon *ngIf="selectedTh === 'deaths'" icon="@tui.filter" class="!text-sm ml-1 mb-0.5" />
+                    <tui-icon *ngIf="selectedTh === 'deaths'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
                 </button>
             </th>
             <th tuiTh>
                 <button (click)="getKills()" class="cursor-pointer">
-                    Убийства<tui-icon *ngIf="selectedTh === 'kills'" icon="@tui.filter" class="!text-sm ml-1 mb-0.5" />
+                    Убийства<tui-icon *ngIf="selectedTh === 'kills'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
                 </button>
             </th>
             <th tuiTh>
                 <button (click)="getHoursPlayed()" class="cursor-pointer">
-                    Часы<tui-icon *ngIf="selectedTh === 'hours'" icon="@tui.filter" class="!text-sm ml-1 mb-0.5" />
+                    Часы<tui-icon *ngIf="selectedTh === 'hours'" icon="@tui.filter" class="text-sm! ml-1 mb-0.5" />
                 </button>
             </th>
         </tr>
