--- a/last-hearth-landing/src/app/public-offer/public-offer/public-offer.component.html
+++ b/last-hearth-landing/src/app/public-offer/public-offer/public-offer.component.html
@@ -13,7 +13,7 @@
             <p class="text-2xl text-lh-primary font-bold">1. Термины и определения</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isTerms }"
+                [ngClass]="{ 'rotate-180!': isTerms }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -65,7 +65,7 @@
             <p class="text-2xl text-lh-primary font-bold">2. Общие положения</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isGeneralProvisions }"
+                [ngClass]="{ 'rotate-180!': isGeneralProvisions }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -108,7 +108,7 @@
             <p class="text-2xl text-lh-primary font-bold">3. Права и обязанности сторон</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isRightsAndObligations }"
+                [ngClass]="{ 'rotate-180!': isRightsAndObligations }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -159,7 +159,7 @@
             <p class="text-2xl text-lh-primary font-bold">4. Ответственность сторон</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isResponsibility }"
+                [ngClass]="{ 'rotate-180!': isResponsibility }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -197,7 +197,7 @@
             <p class="text-2xl text-lh-primary font-bold">5. Условия возврата</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isTermsOfReturn }"
+                [ngClass]="{ 'rotate-180!': isTermsOfReturn }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -217,7 +217,7 @@
             <p class="text-2xl text-lh-primary font-bold">6. Персональные данные</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isPersonalData }"
+                [ngClass]="{ 'rotate-180!': isPersonalData }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -241,7 +241,7 @@
             <p class="text-2xl text-lh-primary font-bold">7. Применимое законодательство и разрешение споров</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isLegislation }"
+                [ngClass]="{ 'rotate-180!': isLegislation }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -264,7 +264,7 @@
             <p class="text-2xl text-lh-primary font-bold">8. Реквизиты Исполнителя</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isRequisites }"
+                [ngClass]="{ 'rotate-180!': isRequisites }"
                 class="text-lh-primary transition-all"
             />
         </div>
