--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -6,7 +6,7 @@
             <p class="text-2xl text-lh-primary font-bold">Терминология</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isTerminology }"
+                [ngClass]="{ 'rotate-180!': isTerminology }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -74,7 +74,7 @@
             <p class="text-2xl text-lh-primary font-bold">1. Основы</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isBase }"
+                [ngClass]="{ 'rotate-180!': isBase }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -171,7 +171,7 @@
             <p class="text-2xl text-lh-primary font-bold">2. Типы игроков и образований</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isPlayersType }"
+                [ngClass]="{ 'rotate-180!': isPlayersType }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -186,7 +186,7 @@
                             <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">2.1 Хутор</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isSinglePlayers }"
+                                [ngClass]="{ 'rotate-180!': isSinglePlayers }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -226,7 +226,7 @@
                             <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">2.2 Лагерь</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isCommons }"
+                                [ngClass]="{ 'rotate-180!': isCommons }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -275,7 +275,7 @@
                             <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">2.3 Деревня</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isCities }"
+                                [ngClass]="{ 'rotate-180!': isCities }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -347,7 +347,7 @@
                             <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">2.4 Поселок</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isRegion }"
+                                [ngClass]="{ 'rotate-180!': isRegion }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -435,7 +435,7 @@
                             <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">2.5 Город</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isMerchantGuild1 }"
+                                [ngClass]="{ 'rotate-180!': isMerchantGuild1 }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -550,7 +550,7 @@
                             </p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isMerchantGuild2 }"
+                                [ngClass]="{ 'rotate-180!': isMerchantGuild2 }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -670,7 +670,7 @@
                             <p class="text-xl pl-8 text-lh-primary">2.7 Город сюзерен</p>
                             <tui-icon
                                 icon="@tui.chevron-down"
-                                [ngClass]="{ '!rotate-180': isMercenaryGuild1 }"
+                                [ngClass]="{ 'rotate-180!': isMercenaryGuild1 }"
                                 class="text-lh-primary transition-all"
                             />
                         </div>
@@ -762,7 +762,7 @@
             <p class="text-2xl text-lh-primary font-bold">3. Действия игроков</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isPlayersActions }"
+                [ngClass]="{ 'rotate-180!': isPlayersActions }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -773,7 +773,7 @@
                         <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">3.1 Воровство.</p>
                         <tui-icon
                             icon="@tui.chevron-down"
-                            [ngClass]="{ '!rotate-180': isTheft }"
+                            [ngClass]="{ 'rotate-180!': isTheft }"
                             class="text-lh-primary transition-all"
                         />
                     </div>
@@ -860,7 +860,7 @@
                         <p class="text-xl pl-8 text-lh-primary cursor-pointer font-bold">3.2 Убийства.</p>
                         <tui-icon
                             icon="@tui.chevron-down"
-                            [ngClass]="{ '!rotate-180': isKills }"
+                            [ngClass]="{ 'rotate-180!': isKills }"
                             class="text-lh-primary transition-all"
                         />
                     </div>
@@ -887,7 +887,7 @@
             <p class="text-2xl text-lh-primary font-bold">4. Протекторат</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isProtectors }"
+                [ngClass]="{ 'rotate-180!': isProtectors }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -918,7 +918,7 @@
             <p class="text-2xl text-lh-primary font-bold">5. Колонизация</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isColonization }"
+                [ngClass]="{ 'rotate-180!': isColonization }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -958,7 +958,7 @@
             <p class="text-2xl text-lh-primary font-bold">6. Состояние набег</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isRaid }"
+                [ngClass]="{ 'rotate-180!': isRaid }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -981,7 +981,7 @@
                         </p>
                         <tui-icon
                             icon="@tui.chevron-down"
-                            [ngClass]="{ '!rotate-180': isRaid3 }"
+                            [ngClass]="{ 'rotate-180!': isRaid3 }"
                             class="text-lh-primary transition-all"
                         />
                     </div>
@@ -1016,7 +1016,7 @@
                         </p>
                         <tui-icon
                             icon="@tui.chevron-down"
-                            [ngClass]="{ '!rotate-180': isRaid2 }"
+                            [ngClass]="{ 'rotate-180!': isRaid2 }"
                             class="text-lh-primary transition-all"
                         />
                     </div>
@@ -1104,7 +1104,7 @@
                         </p>
                         <tui-icon
                             icon="@tui.chevron-down"
-                            [ngClass]="{ '!rotate-180': isRaid4 }"
+                            [ngClass]="{ 'rotate-180!': isRaid4 }"
                             class="text-lh-primary transition-all"
                         />
                     </div>
@@ -1206,7 +1206,7 @@
             <p class="text-2xl text-lh-primary font-bold">7. Состояние война</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isWar }"
+                [ngClass]="{ 'rotate-180!': isWar }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1253,7 +1253,7 @@
             <p class="text-2xl text-lh-primary font-bold">8. Шпионы</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isSpy }"
+                [ngClass]="{ 'rotate-180!': isSpy }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1288,7 +1288,7 @@
             <p class="text-2xl text-lh-primary font-bold">9. Защита построек</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isDefendBuildings }"
+                [ngClass]="{ 'rotate-180!': isDefendBuildings }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1322,7 +1322,7 @@
             <p class="text-2xl text-lh-primary font-bold">10. Ломание построек сложного типа</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isBreakDifficultBuildings }"
+                [ngClass]="{ 'rotate-180!': isBreakDifficultBuildings }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1360,7 +1360,7 @@
             <p class="text-2xl text-lh-primary font-bold">11. Право редактирования правил</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isRight }"
+                [ngClass]="{ 'rotate-180!': isRight }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1383,7 +1383,7 @@
             <p class="text-2xl text-lh-primary font-bold">12. Дополнения</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isAdditions }"
+                [ngClass]="{ 'rotate-180!': isAdditions }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -1404,7 +1404,7 @@
             <p class="text-2xl text-lh-primary font-bold">13. Положение о пожертвованиях</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isDonations }"
+                [ngClass]="{ 'rotate-180!': isDonations }"
                 class="text-lh-primary transition-all"
             />
         </div>
