--- a/last-hearth-landing/src/app/faq/faq.component.html
+++ b/last-hearth-landing/src/app/faq/faq.component.html
@@ -7,7 +7,7 @@
             <p class="text-2xl text-lh-primary font-bold">1. Что это за сервер? Как понять подходит ли он мне?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isAboutServer }"
+                [ngClass]="{ 'rotate-180!': isAboutServer }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -42,7 +42,7 @@
             <p class="text-2xl text-lh-primary font-bold">2. Как мне присоединиться к игре на сервере?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isHowToPlay }"
+                [ngClass]="{ 'rotate-180!': isHowToPlay }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -76,7 +76,7 @@
             <p class="text-2xl text-lh-primary font-bold">3. Регистрация на сайте. Что делать, если я забыл пароль?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isRegistration }"
+                [ngClass]="{ 'rotate-180!': isRegistration }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -109,7 +109,7 @@
             <p class="text-2xl text-lh-primary font-bold">4. Что делать если у меня не заходит на сервер?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isTroubles }"
+                [ngClass]="{ 'rotate-180!': isTroubles }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -197,7 +197,7 @@
             <p class="text-2xl text-lh-primary font-bold">5. Когда вайп и сколько длятся сезоны?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isSeason }"
+                [ngClass]="{ 'rotate-180!': isSeason }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -221,7 +221,7 @@
             <p class="text-2xl text-lh-primary font-bold">6. Я зашел на сервер, с чего мне начать?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isHowToStart }"
+                [ngClass]="{ 'rotate-180!': isHowToStart }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -260,7 +260,7 @@
             <p class="text-2xl text-lh-primary font-bold">7. Валюта сервера, что это и какой курс?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isMoney }"
+                [ngClass]="{ 'rotate-180!': isMoney }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -332,7 +332,7 @@
             <p class="text-2xl text-lh-primary font-bold">8. Что такое вольность, патенты и кто такой сюзерен?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isDocsAndSuzerain }"
+                [ngClass]="{ 'rotate-180!': isDocsAndSuzerain }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -373,7 +373,7 @@
             <p class="text-2xl text-lh-primary font-bold">9. Где найти к кому можно присоединиться?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isSettlements }"
+                [ngClass]="{ 'rotate-180!': isSettlements }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -399,7 +399,7 @@
             <p class="text-2xl text-lh-primary font-bold">10. Я нашел баг или нарушение правил, куда писать?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isBagsOrViolation }"
+                [ngClass]="{ 'rotate-180!': isBagsOrViolation }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -426,7 +426,7 @@
             <p class="text-2xl text-lh-primary font-bold">11. Меня убили или обокрали, что делать?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isDeathOrTheft }"
+                [ngClass]="{ 'rotate-180!': isDeathOrTheft }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -451,7 +451,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isSettlementRegistration }"
+                [ngClass]="{ 'rotate-180!': isSettlementRegistration }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -478,7 +478,7 @@
             </p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isOffer }"
+                [ngClass]="{ 'rotate-180!': isOffer }"
                 class="text-lh-primary transition-all"
             />
         </div>
@@ -504,7 +504,7 @@
             <p class="text-2xl text-lh-primary font-bold">14. Как мне попасть в команду проекта Last Heath?</p>
             <tui-icon
                 icon="@tui.chevron-down"
-                [ngClass]="{ '!rotate-180': isTeam }"
+                [ngClass]="{ 'rotate-180!': isTeam }"
                 class="text-lh-primary transition-all"
             />
         </div>
