--- a/last-hearth-landing/src/app/layout/layout.component.html
+++ b/last-hearth-landing/src/app/layout/layout.component.html
@@ -7,5 +7,5 @@
 </div>
 
 <div class="flex justify-center">
-    <app-footer class="w-full xl:w-[50%] main-panel !rounded-t-xl !rounded-b-none" />
+    <app-footer class="w-full xl:w-[50%] main-panel rounded-t-xl! rounded-b-none!" />
 </div>
